--- a/pagina_html/Tapas.html
+++ b/pagina_html/Tapas.html
@@ -187,7 +187,7 @@
         <form id="dataForm">
             <div class="form-group">
                 <label for="birthYear">Año de nacimiento:</label>
-                <input type="range" id="birthYear" name="birthYear" min="1900" max="2024" value="2000" oninput="document.getElementById('yearValue').textContent = this.value">
+                <input type="range" id="birthYear" name="birthYear" min="1919" max="2006" value="2000" oninput="document.getElementById('yearValue').textContent = this.value">
                 <span id="yearValue">2000</span>
             </div>
             <div class="form-group">
@@ -212,7 +212,7 @@
                     <option value="17">Navarra</option>
                     <option value="18">País Vasco</option>
                     <option value="19">La Rioja</option>
-                    <option value="20">Fuera</option>
+                    <option value="20">Otro País</option>
                 </select>
             </div>
             <div class="form-group full-width">
