--- a/pagina_html/Tapas.html
+++ b/pagina_html/Tapas.html
@@ -19,12 +19,9 @@
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            filter: blur(5px); /* Hace el formulario borroso */
-            pointer-events: none; /* Evita la interacción con el formulario */
         }
-        .container.active {
-            filter: none;
-            pointer-events: auto;
+        .hidden {
+            display: none;
         }
         h1, h2 {
             font-family: 'Georgia', serif;
@@ -45,6 +42,9 @@
             gap: 20px; /* Añadir espacio entre los elementos del formulario */
         }
         .form-group {
+            flex: 1 1 100%;
+        }
+        .half-width {
             flex: 1 1 48%;
         }
         .full-width {
@@ -143,6 +143,7 @@
             background-color: #f1f1f1;
             border-radius: 10px;
             display: none;
+            text-align: center; /* Alinear el texto al centro */
         }
         .result b {
             color: #e85a4f;
@@ -189,16 +190,16 @@
     </div>
 
     <div class="container" id="mainContent">
-        <h1>¿Cuál es tu tapa favorita?</h1>
-        <img src="../imagen/bar.jpg" alt="Imagen de un bar">
-        <h2>Formulario de Datos</h2>
+        <h1 id="mainHeader">¿Cuál es tu tapa favorita?</h1>
+        <img id="mainImage" src="../imagen/bar.jpg" alt="Imagen de un bar">
+        <h2 id="formHeader">Formulario de Datos</h2>
         <form id="dataForm">
-            <div class="form-group">
+            <div class="form-group full-width">
                 <label for="birthYear">Año de nacimiento:</label>
                 <input type="range" id="birthYear" name="birthYear" min="1919" max="2006" value="2000" oninput="document.getElementById('yearValue').textContent = this.value">
                 <span id="yearValue">2000</span>
             </div>
-            <div class="form-group">
+            <div class="form-group half-width">
                 <label for="region">Comunidad Autónoma:</label>
                 <select id="region" name="region">
                     <option value="1">Andalucía</option>
@@ -223,7 +224,7 @@
                     <option value="20">Otro país</option>
                 </select>
             </div>
-            <div class="form-group full-width">
+            <div class="form-group half-width">
                 <label>Género:</label><br>
                 <div class="gender-input">
                     <input type="radio" id="male" name="gender" value="1">
@@ -282,35 +283,38 @@
                 </div>
             </div>
             <div class="button-container">
-                <button type="button" onclick="submitForm()">Predecir</button>
-                <button type="button" onclick="retrainModel()">Reentrenar</button>
+                <button type="submit" onclick="submitForm(event)">Predecir</button>
+                <button type="button" onclick="retrainModel()">Reentrenar Modelo</button>
             </div>
         </form>
         <div class="result" id="resultContainer">
-            <h2>Resultado</h2>
-            <p id="resultText"></p>
-            <img id="resultImage" src="" alt="Imagen de la tapa">
+            <p id="predictionText"><b id="predictedTapa"></b></p>
+            <img id="resultImage" src="" alt="Imagen de la tapa predicha" style="display: none;">
+            <div class="button-container">
+                <button id="predictButton" type="button" onclick="restartPrediction()">Realizar Otra Predicción</button>
+                <button type="button" onclick="retrainModel()">Reentrenar Modelo</button>
+            </div>
         </div>
     </div>
 
     <script>
         // Diccionario de tapas
         const tapasDict = {
-            1: 'berenjena con miel',
-            2: 'caracoles',
-            3: 'chacina',
-            4: 'champiñon plancha',
-            5: 'chipirón plancha',
-            6: 'croquetas',
-            7: 'encurtidos/aceitunas',
-            8: 'ensaladilla rusa',
-            9: 'guisos tradicionales',
-            10: 'montaito/serranito',
-            11: 'oreja',
-            12: 'patatas bravas',
-            13: 'pescado frito',
-            14: 'torreznos/chicharrones',
-            15: 'tortilla patatas'
+            1: 'Berenjena con miel',
+            2: 'Caracoles',
+            3: 'Chacina',
+            4: 'Champiñon plancha',
+            5: 'Chipirón plancha',
+            6: 'Croquetas',
+            7: 'Encurtidos_aceitunas',
+            8: 'Ensaladilla rusa',
+            9: 'Guisos tradicionales',
+            10: 'Montaito_serranito',
+            11: 'Oreja',
+            12: 'Patatas bravas',
+            13: 'Pescado frito',
+            14: 'Torreznos_chicharrones',
+            15: 'Tortilla patatas'
         };
 
         // Función para manejar la confirmación de edad
@@ -327,52 +331,128 @@
         }
 
         // Función para enviar el formulario a la API
-        function submitForm() {
-            // Obtener los valores del formulario
-            const birthYear = document.getElementById('birthYear').value;
-            const region = document.getElementById('region').value;
-            const gender = document.querySelector('input[name="gender"]:checked').value;
-            const beverage = document.querySelector('input[name="beverage"]:checked').value;
+function submitForm() {
+    event.preventDefault(); // Prevenir que el formulario se envíe de forma predeterminada
 
-            const data = {
-                anio: birthYear,
-                comunidad: region,
-                genero: gender,
-                bebida: beverage
-            };
+    // Obtener los valores del formulario
+    const birthYear = document.getElementById('birthYear').value;
+    const region = document.getElementById('region').value;
+    const gender = document.querySelector('input[name="gender"]:checked').value;
+    const beverage = document.querySelector('input[name="beverage"]:checked').value;
 
-            // Enviar los datos a la API usando fetch
-            fetch('https://emmaco.pythonanywhere.com/api/v1/predict', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                return response.json();
-            })
-            .then(result => {
-                console.log(result); // Para ver el contenido de la respuesta
-                const tapaName = tapasDict[result.prediction];
-                const tapaImage = `../imagen/${tapaName.replace(/ /g, '_')}.jpg`;
-                document.getElementById('resultContainer').style.display = 'block';
-                document.getElementById('resultText').innerHTML = `Para ti, una tapita de <b>${tapaName}</b>`;
-                document.getElementById('resultImage').src = tapaImage;
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('Ocurrió un error al enviar los datos. Por favor, intenta nuevamente.');
-            });
+    const data = {
+        anio: birthYear,
+        comunidad: region,
+        genero: gender,
+        bebida: beverage
+    };
+
+    // Enviar los datos a la API usando fetch
+    fetch('https://emmaco.pythonanywhere.com/api/v1/predict', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        return response.json();
+    })
+    .then(result => {
+        const tapaName = tapasDict[result.prediction];
+        const tapaImage = `../imagen/${tapaName.replace(/ /g, '_')}.jpg`;
+        
+        // Ocultar el formulario y mostrar los resultados
+        document.getElementById('dataForm').style.display = 'none';
+        document.getElementById('resultContainer').style.display = 'block';
+        document.getElementById('predictionText').innerHTML = `Para ti, una tapita de: <b id="predictedTapa">${tapaName}</b>`;
+        document.getElementById('resultImage').src = tapaImage;
+        document.getElementById('resultImage').style.display = 'block';
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        alert('Ocurrió un error al enviar los datos. Por favor, intenta nuevamente.');
+    });
+}
+
+        function restartPrediction() {
+            // Restablecer el formulario a los valores por defecto
+            document.getElementById('dataForm').reset();
+            document.getElementById('birthYear').value = 2000;
+            document.getElementById('yearValue').textContent = 2000;
+
+            // Mostrar el formulario y ocultar el resultado
+            document.getElementById('dataForm').style.display = 'flex';
+            document.getElementById('resultContainer').style.display = 'none';
+            document.getElementById('resultImage').style.display = 'none';
+
+            // Mostrar la imagen de portada y el encabezado del formulario
+            document.getElementById('mainHeader').classList.remove('hidden');
+            document.getElementById('mainImage').classList.remove('hidden');
+            document.getElementById('formHeader').classList.remove('hidden');
         }
 
         // Función para reentrenar el modelo
-        function retrainModel() {
-            alert("Funcionalidad de reentrenamiento en desarrollo.");
+function retrainModel() {
+    // Mostrar mensaje de reentrenamiento y deshabilitar el botón de Predecir
+    document.getElementById('mainHeader').classList.add('hidden');
+    document.getElementById('mainImage').classList.add('hidden');
+    document.getElementById('formHeader').classList.add('hidden');
+    document.getElementById('dataForm').style.display = 'none';
+    document.getElementById('resultContainer').style.display = 'block';
+    document.getElementById('predictedTapa').textContent = "Reentrenando";
+    document.getElementById('resultImage').style.display = 'none';
+
+    // Mostrar barra de progreso clara y definida
+    const progressBar = document.createElement('div');
+    progressBar.id = 'progressBar';
+    progressBar.style.width = '100%';
+    progressBar.style.height = '20px';
+    progressBar.style.backgroundColor = '#ccc';
+    progressBar.style.borderRadius = '10px';
+    progressBar.innerHTML = '<div id="progressBarFill" style="width: 0%; height: 100%; background-color: #e85a4f; border-radius: 10px;"></div>';
+    const resultContainer = document.getElementById('resultContainer');
+    resultContainer.insertBefore(progressBar, resultContainer.querySelector('.button-container'));
+
+    // Cambiar el botón para que diga "Predecir" y deshabilitarlo
+    const buttonContainer = document.getElementById('resultContainer').querySelector('.button-container');
+    buttonContainer.innerHTML = '<button id="predictButton" type="button" onclick="restartPrediction()" disabled style="opacity: 0.5;">Predecir</button>';
+
+    fetch('https://emmaco.pythonanywhere.com//api/v1/retrain', {
+        method: 'GET'
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
         }
+        return response.text();
+    })
+    .then(result => {
+        // Ocultar barra de progreso y habilitar botón de Predecir
+        document.getElementById('progressBar').remove();
+        document.getElementById('predictButton').disabled = false;
+        document.getElementById('predictButton').style.opacity = '1';
+        document.getElementById('predictedTapa').textContent = `Reentrenamiento completado. Precisión: ${result}`;
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        alert('Ocurrió un error al reentrenar el modelo. Por favor, intenta nuevamente.');
+    });
+
+    // Simulación de progreso de la barra (para fines de demostración)
+    let progress = 0;
+    const progressInterval = setInterval(() => {
+        if (progress >= 100) {
+            clearInterval(progressInterval);
+        } else {
+            progress += 10;
+            document.getElementById('progressBarFill').style.width = progress + '%';
+        }
+    }, 500);
+}
     </script>
 </body>
 </html>
